# ObjectTracking

./: CMakeLists.txt  main.cpp
Factories/: DetectorsFactory.h  FactoryInterface.h  TrackersFactory.h
Strategies/: DetectorStrategy.h  StrategyInterface.h  TrackerStrategy.h
include/: DetectorInterface.h  TrackerInterface.h  VImage.h
plugins/YahooTrackerPlugin/: CMakeLists.txt  YahooTracker.cpp  YahooTracker.h  YahooTrackerPlugin.cpp
plugins/YoloDetectorPlugin/: CMakeLists.txt  YoloDetector.cpp  YoloDetector.h  YoloDetectorPlugin.cpp
